--- a/index.html
+++ b/index.html
@@ -1,19 +1,46 @@
 <html>
     <head>
-<title>
-    bootstrap
-</title>
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+        
     </head>
     <body>
-    <div class="container-fluid text-center text-uppercase" id="boot">
-    <h1> Who am I? </h1>
-    <img class="rounded-circle img-fluid"src="boots image.webp">
-    <p>I am Eva</p>
+<div class="row">
+<div class="col-sm-1" style="background-color: aqua;">
+col-sm-1
+</div>
+<div class="col-sm-1" style="background-color: rgb(217, 255, 0);">
+    col-sm-1
     </div>
+    <div class="col-sm-1" style="background-color: aqua;">
+        col-sm-1
+        </div>
+        <div class="col-lg-4 col-sm-1" style="background-color: rgb(237, 255, 100);">
+            col-sm-1
+            </div>
+            <div class="col-sm-1" style="background-color: aqua;">
+                col-sm-1
+                </div>
+                <div class="col-sm-1" style="background-color: rgb(243, 255, 110);">
+                    col-sm-1
+                    </div>
+                    <div class="col-sm-1" style="background-color: aqua;">
+                        col-sm-1
+                        </div>
+                        <div class="col-sm-1" style="background-color: rgb(255, 253, 109);">
+                            col-sm-1
+                            </div>
+                            <div class="col-sm-1" style="background-color: aqua;">
+                                col-sm-1
+                                </div>
+                                <div class="col-sm-1" style="background-color: rgb(236, 252, 133);">
+                                    col-sm-1
+                                      </div>
+                                    <div class="col-sm-1" style="background-color: aqua;">
+                                        col-sm-1
+                                      </div>
+</div>
     </body>
 </html>
